--- a/best_practices.html
+++ b/best_practices.html
@@ -461,29 +461,26 @@ div.tocify {
 </div>
 
 
-<p>We’ll going to get up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
 <p>This is the first module in the <a href="topic_building_blocks.html">Building Blocks</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<div class="container">
-<h2>
-Simple Collapsible
-</h2>
-<p>
-Click on the button to toggle between showing and hiding content.
-</p>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
-<div id="demo" class="collapse">
-<pre><code>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</code></pre>
+<div id="section" class="section level2 tabset tabset-pills">
+<h2></h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning objectives</h3>
+<p>We’ll going to get up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
 </div>
-</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
 <script async class="speakerdeck-embed" data-id="39618f30472e4cac9659ce4f21a98aa6" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-best-practices-1" title="Best Practices" target="_blank">Best Practices</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<iframe src="https://www.youtube.com/embed/oHg5SJYRHA0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%" height="100%" width="100%">
+</iframe>
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -505,12 +502,13 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
 ##################################################################</code></pre>
 <p>As part of <a href="homework_0.html">Homework 0</a>, we installed a lot of packages. You don’t need to re-install those each time you need them, but you do need to load packages you want to use with the <code>library</code> function. Although we won’t use it yet, I’m going to load the <code>tidyverse</code> package now.</p>
 <pre class="r"><code>library(tidyverse)
-## ── Attaching packages ────────── tidyverse 1.3.0 ──
+## Warning: package &#39;tidyverse&#39; was built under R version 4.0.1
+## ── Attaching packages ───────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
 ## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.1     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.3     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0
-## ── Conflicts ───────────── tidyverse_conflicts() ──
+## ── Conflicts ──────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>You can do basic computations in R, either on the command line (in the console) or by writing things in the script and executing the code in the console. Note that you can execute commands (e.g. the line with the cursor or highlighted code) in the console from a script using Command+Enter (Mac) or Ctrl+Enter (Windows).</p>
@@ -529,15 +527,15 @@ x + y
 <p>When making assignments, R assumes you don’t want to see the result. If you do want to see the result, you’ll have to ask for it. You can also apply <strong>functions</strong> to objects.</p>
 <pre class="r"><code>x = runif(20)
 x
-##  [1] 0.11088512 0.71948899 0.04551100 0.43090143 0.03599215 0.85440819
-##  [7] 0.95985012 0.65031284 0.61630894 0.24656530 0.89498765 0.11959194
-## [13] 0.75915771 0.67897402 0.86605588 0.63070411 0.18407022 0.86345731
-## [19] 0.63819275 0.72419891
+##  [1] 0.96259137 0.43910491 0.21749190 0.24744033 0.42320196 0.53371822
+##  [7] 0.78279877 0.09661989 0.36009812 0.86386769 0.93104833 0.02562611
+## [13] 0.12064119 0.48833360 0.48981922 0.56749763 0.19637339 0.48805653
+## [19] 0.96391056 0.67314933
 
 mean(x)
-## [1] 0.5514807
+## [1] 0.4935695
 var(x)
-## [1] 0.09804802</code></pre>
+## [1] 0.08732813</code></pre>
 <p>We’ve created two variables, <code>x</code> and <code>y</code> – these now exist in the <strong>environment</strong>. You can see everything in the environment using <code>ls()</code> on the command line, or check out the environment pane in RStudio.</p>
 <p>(If you care about these things, <a href="https://colinfay.me/r-assignment/">people</a> have <a href="https://twitter.com/JennyBryan/status/1162185393518759936">opinions</a> about <a href="https://r4ds.had.co.nz/workflow-basics.html#coding-basics">assignment operators</a>. I don’t have such strong opinions about this, and don’t care much if you use <code>=</code> or <code>&lt;-</code>.)</p>
 </div>
@@ -753,7 +751,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
