--- a/schedule.html
+++ b/schedule.html
@@ -392,176 +392,158 @@ $(document).ready(function () {
 <th align="left">Topic</th>
 <th align="left">Lecture</th>
 <th align="center">Slides</th>
-<th align="center">Slack</th>
 <th align="center">HW</th>
-<th align="right">Projects</th>
+<th align="center">Projects</th>
+<th align="right"></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Tues Sept 3</td>
+<td align="left">Tues Sept 8</td>
 <td align="left">What is Data Science?</td>
 <td align="left"><a href="what_is_ds_i.html">What is Data Science?</a></td>
 <td align="center"><a href="slides/what_is_data_science_i.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/general"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"><a href="homework_0.html"><i class="far fa-file-code fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Sept 5</td>
+<td align="left">Thur Sept 10</td>
 <td align="left">Building blocks</td>
 <td align="left"><a href="best_practices.html">Best Practices</a></td>
 <td align="center"><a href="slides/best_practices.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Sept 10</td>
+<td align="left">Tues Sept 15</td>
 <td align="left">Building blocks</td>
 <td align="left"><a href="writing_with_data.html">Writing with Data</a></td>
 <td align="center"><a href="slides/writing_with_data.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Sept 12</td>
+<td align="left">Thur Sept 17</td>
 <td align="left">Building blocks</td>
 <td align="left"><a href="git.html">Git</a></td>
 <td align="center"><a href="slides/git.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"><a href="homework_1.html"><i class="far fa-file-code fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Sept 17</td>
+<td align="left">Tues Sept 22</td>
 <td align="left">Data Wrangling I</td>
 <td align="left"><a href="data_import.html">Data Import</a></td>
 <td align="center"><a href="slides/data_import.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN898UWNB"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Sept 19</td>
+<td align="left">Thur Sept 24</td>
 <td align="left">Data Wrangling I</td>
 <td align="left"><a href="data_manipulation.html">Data Manipulation</a></td>
 <td align="center"><a href="slides/data_manipulation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN898UWNB"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Sept 24</td>
+<td align="left">Tues Sept 29</td>
 <td align="left">Data Wrangling I</td>
 <td align="left"><a href="tidy_data.html">Tidy data</a></td>
 <td align="center"><a href="slides/tidy_data.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN898UWNB"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"><a href="homework_2.html"><i class="far fa-file-code fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Sept 26</td>
+<td align="left">Thur Oct 1</td>
 <td align="left">Viz + EDA</td>
 <td align="left"><a href="visualization_pt1.html">Visualization 1</a></td>
 <td align="center"><a href="slides/visualization.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01ALHR7"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Oct 1</td>
+<td align="left">Tues Oct 6</td>
 <td align="left">Viz + EDA</td>
 <td align="left"><a href="visualization_pt2.html">Visualization 2</a></td>
 <td align="center"><a href="slides/visualization.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01ALHR7"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Oct 3</td>
+<td align="left">Thur Oct 8</td>
 <td align="left">Viz + EDA</td>
 <td align="left"><a href="exploratory_analysis.html">EDA</a></td>
 <td align="center"><a href="slides/exploratory_analysis.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01ALHR7"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"><a href="homework_3.html"><i class="far fa-file-code fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Oct 8</td>
+<td align="left">Tues Oct 13</td>
 <td align="left">Case Study</td>
 <td align="left"><a href="what_is_ds_ii.html">Case study</a></td>
 <td align="center"><a href="slides/what_is_data_science_ii.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CNU5YKBHR"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Oct 10</td>
+<td align="left">Thur Oct 15</td>
 <td align="left">Data Wrangling II</td>
 <td align="left"><a href="reading_data_from_the_web.html">Reading Data from the Web</a></td>
 <td align="center"><a href="slides/reading_data_from_the_web.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN8998SH5"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Oct 15</td>
+<td align="left">Tues Oct 20</td>
 <td align="left">Data Wrangling II</td>
 <td align="left"><a href="strings_and_factors.html">Strings and Factors</a></td>
 <td align="center"><a href="slides/strings_and_factors.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN8998SH5"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"></td>
-<td align="right"><a href="midterm_project.html">Midterm</a></td>
+<td align="center"></td>
+<td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Oct 17</td>
+<td align="left">Tues Oct 22</td>
+<td align="left">Data Wrangling II</td>
+<td align="left"><a href="strings_and_factors.html">TBD</a></td>
+<td align="center"><a href="slides/strings_and_factors.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="center"><a href="midterm_project.html">Midterm</a></td>
+<td align="right"></td>
+</tr>
+<tr class="odd">
+<td align="left">Thur Oct 27</td>
 <td align="left">Interactivity</td>
 <td align="left"><a href="making_websites.html">Making Websites</a></td>
 <td align="center"><a href="slides/making_websites.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN6DF7F1B"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
-<tr class="odd">
-<td align="left">Tues Oct 22</td>
+<tr class="even">
+<td align="left">Tues Oct 29</td>
 <td align="left">Interactivity</td>
 <td align="left"><a href="plotly_and_dashboards.html">Plot.ly and Dashboards</a></td>
 <td align="center"><a href="slides/plotly_and_dashboards.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN6DF7F1B"><i class="fab fa-slack fa-lg"></i></a></td>
 <td align="center"><a href="homework_4.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="right"><a href="final_project.html">Final</a></td>
-</tr>
-<tr class="even">
-<td align="left">Thur Oct 24</td>
-<td align="left">Iteration</td>
-<td align="left"><a href="writing_functions.html">Writing Functions</a></td>
-<td align="center"><a href="slides/writing_functions.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN8KK99NJ"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"></td>
+<td align="center"><a href="final_project.html">Final</a></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Oct 29</td>
-<td align="left">Iteration</td>
-<td align="left"><a href="iteration_and_listcols.html">Iteration and Listcols</a></td>
-<td align="center"><a href="slides/iteration_and_listcols.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN8KK99NJ"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"></td>
-<td align="right"></td>
-</tr>
-<tr class="even">
-<td align="left">Thur Oct 31</td>
-<td align="left">Iteration</td>
-<td align="left"><a href="simulation.html">Simulation</a></td>
-<td align="center"><a href="slides/simulation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN8KK99NJ"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"><a href="homework_5.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="right"></td>
-</tr>
-<tr class="odd">
-<td align="left">Tues Nov 5</td>
+<td align="left">Tues Nov 3</td>
 <td align="left">-Election day-</td>
 <td align="left"></td>
 <td align="center"></td>
@@ -570,61 +552,61 @@ $(document).ready(function () {
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Nov 7</td>
+<td align="left">Thur Nov 5</td>
+<td align="left">Iteration</td>
+<td align="left"><a href="writing_functions.html">Writing Functions</a></td>
+<td align="center"><a href="slides/writing_functions.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="odd">
+<td align="left">Tues Nov 10</td>
+<td align="left">Iteration</td>
+<td align="left"><a href="iteration_and_listcols.html">Iteration and Listcols</a></td>
+<td align="center"><a href="slides/iteration_and_listcols.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="even">
+<td align="left">Thur Nov 12</td>
+<td align="left">Iteration</td>
+<td align="left"><a href="simulation.html">Simulation</a></td>
+<td align="center"><a href="slides/simulation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="odd">
+<td align="left">Tues Nov 17</td>
+<td align="left">Iteration</td>
+<td align="left"><a href="simulation.html">TBD</a></td>
+<td align="center"><a href="slides/simulation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"><a href="homework_5.html"><i class="far fa-file-code fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="even">
+<td align="left">Thur Nov 19</td>
 <td align="left">Linear models</td>
 <td align="left"><a href="linear_models.html">Linear Models</a></td>
 <td align="center"><a href="slides/linear_models.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN6D894NL"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Nov 12</td>
+<td align="left">Tues Nov 24</td>
 <td align="left">Linear models</td>
 <td align="left"><a href="cross_validation.html">Cross Validation</a></td>
 <td align="center"><a href="slides/cross_validation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN6D894NL"><i class="fab fa-slack fa-lg"></i></a></td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Nov 14</td>
-<td align="left">Linear models</td>
-<td align="left"><a href="bootstrapping.html">Bootstrapping</a></td>
-<td align="center"><a href="slides/bootstrapping.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN6D894NL"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"><a href="homework_6.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="right"></td>
-</tr>
-<tr class="odd">
-<td align="left">Tues Nov 19</td>
-<td align="left">Extra topics</td>
-<td align="left">Building R Packages (with <a href="https://twitter.com/robinson_es">Emily Robinson</a>)</td>
-<td align="center"><a href="bit.ly/nyrconf19"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01H0GHX"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"></td>
-<td align="right"></td>
-</tr>
-<tr class="even">
-<td align="left">Thur Nov 21</td>
-<td align="left">Extra topics</td>
-<td align="left"><a href="shiny.html">Shiny</a></td>
-<td align="center"><a href="slides/shiny.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01H0GHX"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"></td>
-<td align="right"></td>
-</tr>
-<tr class="odd">
-<td align="left">Tues Nov 26</td>
-<td align="left">Extra topics</td>
-<td align="left"><a href="stat_learning.html">Statistical Learning</a></td>
-<td align="center"><a href="slides/stat_learning.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
-<td align="center"><a href="https://p8105fall2019.slack.com/messages/CN01H0GHX"><i class="fab fa-slack fa-lg"></i></a></td>
-<td align="center"><a href="homework_7.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="right"></td>
-</tr>
-<tr class="even">
-<td align="left">Thur Nov 28</td>
+<td align="left">Thur Nov 26</td>
 <td align="left">-Thanksgiving-</td>
 <td align="left"></td>
 <td align="center"></td>
@@ -633,25 +615,43 @@ $(document).ready(function () {
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Dec 3</td>
-<td align="left">-Final Project Week-</td>
-<td align="left"></td>
-<td align="center"></td>
+<td align="left">Tues Dec 1</td>
+<td align="left">Linear models</td>
+<td align="left"><a href="bootstrapping.html">Bootstrapping</a></td>
+<td align="center"><a href="slides/bootstrapping.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="even">
-<td align="left">Thur Dec 5</td>
-<td align="left">-Final Project Week-</td>
-<td align="left"></td>
+<td align="left">Thur Dec 3</td>
+<td align="left">Linear models</td>
+<td align="left"><a href="bootstrapping.html">TBD</a></td>
+<td align="center"><a href="slides/bootstrapping.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"><a href="homework_6.html"><i class="far fa-file-code fa-lg"></i></a></td>
 <td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="odd">
+<td align="left">Tues Dec 8</td>
+<td align="left">Extra topics</td>
+<td align="left"><a href="with%20%5BEmily%20Robinson%5D(https://twitter.com/robinson_es)">TBD</a></td>
+<td align="center"><a href="bit.ly/nyrconf19"><i class="fas fa-desktop fa-lg"></i></a></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+</tr>
+<tr class="even">
+<td align="left">Thur Dec 10</td>
+<td align="left">Extra topics</td>
+<td align="left"><a href="shiny.html">TBD</a></td>
+<td align="center"><a href="slides/shiny.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
 </tr>
 <tr class="odd">
-<td align="left">Tues Dec 10</td>
+<td align="left">Tues Dec 15</td>
 <td align="left">Final Projects!</td>
 <td align="left"><a href="what_is_ds_iii.html">What is Data Science Revisited</a></td>
 <td align="center"><a href="slides/what_is_data_science_iii.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
