--- a/schedule.html
+++ b/schedule.html
@@ -409,7 +409,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Thur Sept 10</td>
-<td align="left">Building blocks</td>
+<td align="left">Building Blocks</td>
 <td align="left"><a href="best_practices.html">Best Practices</a></td>
 <td align="center"><a href="slides/best_practices.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -418,7 +418,7 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td align="left">Tues Sept 15</td>
-<td align="left">Building blocks</td>
+<td align="left">Building Blocks</td>
 <td align="left"><a href="writing_with_data.html">Writing with Data</a></td>
 <td align="center"><a href="slides/writing_with_data.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -427,7 +427,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Thur Sept 17</td>
-<td align="left">Building blocks</td>
+<td align="left">Building Blocks</td>
 <td align="left"><a href="git.html">Git</a></td>
 <td align="center"><a href="slides/git.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"><a href="homework_1.html"><i class="far fa-file-code fa-lg"></i></a></td>
@@ -544,7 +544,7 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td align="left">Tues Nov 3</td>
-<td align="left">-Election day-</td>
+<td align="left">-Election Day-</td>
 <td align="left"></td>
 <td align="center"></td>
 <td align="center"></td>
@@ -589,7 +589,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Thur Nov 19</td>
-<td align="left">Linear models</td>
+<td align="left">Linear Models</td>
 <td align="left"><a href="linear_models.html">Linear Models</a></td>
 <td align="center"><a href="slides/linear_models.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -598,7 +598,7 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td align="left">Tues Nov 24</td>
-<td align="left">Linear models</td>
+<td align="left">Linear Models</td>
 <td align="left"><a href="cross_validation.html">Cross Validation</a></td>
 <td align="center"><a href="slides/cross_validation.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -616,7 +616,7 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td align="left">Tues Dec 1</td>
-<td align="left">Linear models</td>
+<td align="left">Linear Models</td>
 <td align="left"><a href="bootstrapping.html">Bootstrapping</a></td>
 <td align="center"><a href="slides/bootstrapping.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -625,7 +625,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Thur Dec 3</td>
-<td align="left">Linear models</td>
+<td align="left">Linear Models</td>
 <td align="left"><a href="bootstrapping.html">TBD</a></td>
 <td align="center"><a href="slides/bootstrapping.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"><a href="homework_6.html"><i class="far fa-file-code fa-lg"></i></a></td>
@@ -634,7 +634,7 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td align="left">Tues Dec 8</td>
-<td align="left">Extra topics</td>
+<td align="left">Extra Topics</td>
 <td align="left"><a href="with%20%5BEmily%20Robinson%5D(https://twitter.com/robinson_es)">TBD</a></td>
 <td align="center"><a href="bit.ly/nyrconf19"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
@@ -643,7 +643,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Thur Dec 10</td>
-<td align="left">Extra topics</td>
+<td align="left">Extra Topics</td>
 <td align="left"><a href="shiny.html">TBD</a></td>
 <td align="center"><a href="slides/shiny.pdf"><i class="fas fa-desktop fa-lg"></i></a></td>
 <td align="center"></td>
