--- a/index.html
+++ b/index.html
@@ -388,12 +388,16 @@ $(document).ready(function () {
 <p><br><br><img src="images/p8105_logo.jpg" alt="logo" style="width:85%; border:10px solid"><br></p>
 <p>Contemporary biostatistics and data analysis depends on the mastery of tools for computation, exploratory analysis, visualization, dissemination, and reproducibility, in addition to proficiency in traditional statistical techniques. The goal of this course is to provide training in the elements of a complete pipeline for data analysis. We will develop skills in data wrangling, reproducible research, software development, collaboration, and effective communication; all programming will be done in R. Although there are no formal prerequisites for this course, some familiarity with statistics and basic programming knowledge will be helpful.</p>
 <p>This course is being offered in the Fall of 2020 through the Biostatistics Department at the Columbia School of Public Health; the syllabus is available here [<a href="resources/P8105_Syllabus.pdf">coming soon</a> | <a href="resources/P8105_Syllabus.docx">coming soon</a>].</p>
+<div id="live-sessions" class="section level3">
+<h3>Live Sessions</h3>
+<p>Live (synchronous) sessions can be accessed through this <a href="https://columbiacuimc.zoom.us/j/97364164791">Zoom link</a> (passcode: 764753), and will be held on the following dates:</p>
+<p>9/8 (What is Data Science?) 9/15 (Building Blocks) 9/24 (Data Wrangling I) 10/6 (Visualization &amp; EDA) 10/13 (Case Study) 10/20 (Data Wrangling II) 10/29 (Interactivity) 11/10 (Iteration) 11/24 (Linear Models) TBD (Extra Topics)</p>
+</div>
 <div id="people" class="section level3">
 <h3>People</h3>
 <ul>
 <li>Jeff Goldsmith (Instructor; ajg2202)</li>
 <li>Margaret Gacheru (Lead TA; mg3861)</li>
-<li>TBD (UNI)</li>
 <li>Hana Akbarnejad (ha2546)</li>
 <li>Bryan Bunning (bjb2178)</li>
 <li>Junxian Chen (jc5314)</li>
@@ -401,6 +405,7 @@ $(document).ready(function () {
 <li>Sibei Liu (sl4660)</li>
 <li>Robert Tumasian III (rat2134)</li>
 <li>Yuanzhi Yu (yy3019)</li>
+<li>Duzhi Zhao (dz2426)</li>
 </ul>
 </div>
 <div id="calendar" class="section level3">
