--- a/index.html
+++ b/index.html
@@ -391,7 +391,18 @@ $(document).ready(function () {
 <div id="live-sessions" class="section level3">
 <h3>Live Sessions</h3>
 <p>Live (synchronous) sessions can be accessed through this <a href="https://columbiacuimc.zoom.us/j/97364164791">Zoom link</a> (passcode: 764753), and will be held on the following dates:</p>
-<p>9/8 (What is Data Science?) 9/15 (Building Blocks) 9/24 (Data Wrangling I) 10/6 (Visualization &amp; EDA) 10/13 (Case Study) 10/20 (Data Wrangling II) 10/29 (Interactivity) 11/10 (Iteration) 11/24 (Linear Models) TBD (Extra Topics)</p>
+<ul>
+<li>9/8 (What is Data Science?)</li>
+<li>9/15 (Building Blocks)</li>
+<li>9/24 (Data Wrangling I)</li>
+<li>10/6 (Visualization &amp; EDA)</li>
+<li>10/13 (Case Study)</li>
+<li>10/20 (Data Wrangling II)</li>
+<li>10/29 (Interactivity)</li>
+<li>11/10 (Iteration)</li>
+<li>11/24 (Linear Models)</li>
+<li>TBD (Extra Topics)</li>
+</ul>
 </div>
 <div id="people" class="section level3">
 <h3>People</h3>
