--- a/git.html
+++ b/git.html
@@ -461,12 +461,36 @@ div.tocify {
 </div>
 
 
-<p>This is the third module in the <a href="topic_building_blocks.html">Building blocks</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="b1f65532f0644b8fb5301f8fd6934b01" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the third module in the <a href="topic_building_blocks.html">Building blocks</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>We’ll be getting up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/b1f65532f0644b8fb5301f8fd6934b01" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-git-and-github" title="Git and GitHub" target="_blank">Git and GitHub</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+</div>
+<p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
 </div>
 </div>
 <div id="example" class="section level2">
@@ -507,7 +531,8 @@ div.tocify {
 <p>Now I’ll start actually doing stuff. As I noted above, I’m going to repeat some of <a href="writing_with_data.html">Writing with Data</a> – my goal is to focus on the git side of things without distractions from new code. As a first step, I’ll add an R Markdown template (download <a href="resources/template.Rmd">here</a>), knit it, and commit.</p>
 <p><img src="images/git_second_commit.png" style="width:80%"></p>
 <p>Next I’ll add an R Markdown file looking at basic plots (shown below; download <a href="resources/rmd_basic_plots.Rmd">here</a>) to my repository / directory.</p>
-<pre><code>---
+<pre><code>
+---
 title: &quot;Basic Plots&quot;
 author: &quot;Jeff Goldsmith&quot;
 date: 2019-09-10
@@ -575,7 +600,7 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()
 <p>This is great if you’re working in a team, or if you are considering future-you as a collaborator.</p>
 <p>For the repository holding this example, I’ll add Angel as a collaborator. Once she’s been added, she’s going to add a histogram of <code>y</code> to our basic plot RMD. He’ll commit and push; I’ll relax until he’s done, then pull her changes from the remote repository to my local repository. Those changes will appear in my local repository, and a summary of the changes are in my git history.</p>
 <p><img src="images/git_collab_commit.png" style="width:80%"></p>
-<p>Of course, team members may want to work in parallel. As an example, I’ll edit the README a bit and Angel will add the RMD file for vector classes. Once I’ve written my code, I’m going to commit; pull to see if there are any changes in the remote repository; and then push everything.</p>
+<p>Of course, team members may want to work in parallel. As an example, I’ll edit the README a bit and Angel will edit the template RMD file. Once I’ve written my code, I’m going to commit; pull to see if there are any changes in the remote repository; and then push everything.</p>
 <p><img src="images/git_parallel_code.png" style="width:80%"></p>
 <p>This process (commit &gt; pull &gt; push) can help keep you out of trouble, although other approaches are possible.</p>
 </div>
@@ -587,7 +612,7 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()
 <p>We’ve both written text in the same place, and have to make a decision about which to keep. You have a couple of options: one is to open the file in question, go through each conflict (which will be indicated in text), fix the text to your liking and remove all the markers that indicate the conflicts. We can also do this with the help of a merge tool, which will show where differences are and allow us to make a choice about which to keep.</p>
 <p><img src="images/git_conflict_tool.png" style="width:80%"></p>
 <p>After resolving conflicts, should commit the changes and push the new unified version to the remote repository.</p>
-<p>Merge conflicts are a fact of life in collaborative work, and you probably run into them more often than you’d like to admit (e.g. “Jeff’s Conflicted Copy” in Dropbox, or parallel versions of Word documents). Git can seem like it makes this worse, but that’s mostly because it’s new and scary, and it forces you to address conflicts as they arise in a structured way rather than ignoring issues / managing them in an ad-hoc way.</p>
+<p>Merge conflicts are a fact of life in collaborative work, and you probably run into them more often than you’d like to admit (e.g. “Jeff’s Conflicted Copy” in Dropbox, or parallel versions of Word documents). Git can seem like it makes this worse, but that’s mostly because it’s new and scary, and it forces you to address conflicts as they arise in a structured way rather than ignoring issues / managing them in an ad-hoc way.</p>
 <p>That said, try to coordinate with teammates so it’s clear who is working on what and when they’re doing it.</p>
 </div>
 <div id="new-workflow-project-first" class="section level3">
@@ -672,7 +697,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
