--- a/best_practices.html
+++ b/best_practices.html
@@ -461,12 +461,12 @@ div.tocify {
 </div>
 
 
-<p>This is the first module in the <a href="topic_building_blocks.html">Building Blocks</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CMPF9U6LA">here</a>.</p>
+<p>This is the first module in the <a href="topic_building_blocks.html">Building Blocks</a> topic.</p>
 <div id="overview" class="section level2 tabset tabset-pills">
 <h2>Overview</h2>
 <div id="learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
-<p>We’ll going to get up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
+<p>We’ll be getting up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
 </div>
 <div id="slide-deck" class="section level3">
 <h3>Slide Deck</h3>
@@ -513,12 +513,16 @@ div.tocify {
 ##################################################################</code></pre>
 <p>As part of <a href="homework_0.html">Homework 0</a>, we installed a lot of packages. You don’t need to re-install those each time you need them, but you do need to load packages you want to use with the <code>library</code> function. Although we won’t use it yet, I’m going to load the <code>tidyverse</code> package now.</p>
 <pre class="r"><code>library(tidyverse)
-## ── Attaching packages ─────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
-## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
-## ✓ tibble  3.0.1     ✓ dplyr   0.8.5
-## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
-## ✓ readr   1.3.1     ✓ forcats 0.5.0
-## ── Conflicts ────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## Warning: package &#39;tidyverse&#39; was built under R version 3.6.3
+## -- Attaching packages ---------------------------------------------------- tidyverse 1.3.0 --
+## v ggplot2 3.3.0     v purrr   0.3.2
+## v tibble  2.1.3     v dplyr   0.8.3
+## v tidyr   1.0.2     v stringr 1.4.0
+## v readr   1.3.1     v forcats 0.5.0
+## Warning: package &#39;ggplot2&#39; was built under R version 3.6.3
+## Warning: package &#39;tidyr&#39; was built under R version 3.6.3
+## Warning: package &#39;forcats&#39; was built under R version 3.6.3
+## -- Conflicts ------------------------------------------------------- tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>You can do basic computations in R, either on the command line (in the console) or by writing things in the script and executing the code in the console. Note that you can execute commands (e.g. the line with the cursor or highlighted code) in the console from a script using Command+Enter (Mac) or Ctrl+Enter (Windows).</p>
@@ -537,14 +541,15 @@ x + y
 <p>When making assignments, R assumes you don’t want to see the result. If you do want to see the result, you’ll have to ask for it. You can also apply <strong>functions</strong> to objects.</p>
 <pre class="r"><code>x = runif(20)
 x
-##  [1] 0.5919850 0.2942353 0.7411212 0.5733009 0.3926267 0.1936479 0.3848076
-##  [8] 0.9917301 0.5526434 0.7538818 0.3304449 0.2665782 0.3370680 0.4870138
-## [15] 0.4626118 0.4461851 0.8455476 0.8129679 0.2729829 0.4096276
+##  [1] 0.18087292 0.13418070 0.16005889 0.08814216 0.13517610 0.64985173
+##  [7] 0.33121563 0.77101748 0.90239511 0.84584059 0.15859780 0.93948516
+## [13] 0.66934136 0.72206726 0.55536777 0.39359075 0.35436639 0.23688578
+## [19] 0.24305655 0.78888645
 
 mean(x)
-## [1] 0.5070504
+## [1] 0.4630198
 var(x)
-## [1] 0.04906812</code></pre>
+## [1] 0.08813239</code></pre>
 <p>We’ve created two variables, <code>x</code> and <code>y</code> – these now exist in the <strong>environment</strong>. You can see everything in the environment using <code>ls()</code> on the command line, or check out the environment pane in RStudio.</p>
 <p>(If you care about these things, <a href="https://colinfay.me/r-assignment/">people</a> have <a href="https://twitter.com/JennyBryan/status/1162185393518759936">opinions</a> about <a href="https://r4ds.had.co.nz/workflow-basics.html#coding-basics">assignment operators</a>. I don’t have such strong opinions about this, and don’t care much if you use <code>=</code> or <code>&lt;-</code>.)</p>
 </div>
@@ -653,7 +658,7 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()</code></pre>
 <div id="organizing-projects" class="section level3">
 <h3>Organizing projects</h3>
 <p>Your projects will generally consist of several related files – input data, scripts, results. It’s important to keep these organized, so you can find everything you need quickly and easily. R Projects, through RStudio, give you an easy way to do this.</p>
-<p>Create a directory and save the previous two scripts into that directory. Script names, like variable names, should be descriptive (e.g. <code>20190905_data_classes.R</code> and <code>20190905_simple_plots.R</code>). The directory name should be descriptive as well, and it should be in a reasonable place on your computer (e.g. <code>~/Documents/First_Project/</code>). Create an R Project using File &gt; New Project &gt; Existing Directory and specifying the directory you just created.</p>
+<p>Create a directory and save the previous two scripts into that directory. Script names, like variable names, should be descriptive (e.g. <code>20200905_var_assign.R</code> and <code>20200905_simple_plots.R</code>). The directory name should be descriptive as well, and it should be in a reasonable place on your computer (e.g. <code>~/Documents/first_project/</code>). Create an R Project using File &gt; New Project &gt; Existing Directory and specifying the directory you just created.</p>
 <p>For now, the best part about R Projects is that they force you to think about and organize the elements you need for your analysis or project. Double-clicking the new <code>.Rproj</code> file will launch the R Project; you’ll see a Files tab in the usual Plots / Packages / Help / Viewer pane. Later, we’ll find R Projects useful in other ways.</p>
 </div>
 <div id="paths-and-your-working-directory" class="section level3">
@@ -663,14 +668,14 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()</code></pre>
 <p>If you’ve opened your R Project, that should be your working directory. That’s great! Another bit of encouragement to keep your stuff organized. This means that anything you output will be written to this directory:</p>
 <pre class="r"><code>ggplot(plot_df, aes(x = x, y = y)) + geom_point()
 ggsave(&quot;scatter_plot.pdf&quot;, height = 4, width = 6)</code></pre>
-<p>With larger projects, it can be useful to create sub-directories for your project (e.g. <code>data</code> and <code>results</code>) – you don’t need to worry about that for now, but when you do this you should use relative paths to keep everything self-contained. That’s also a good time to start getting used to the <a href="https://github.com/jennybc/here_here"><code>here::here</code></a> approach to path construction.</p>
+<p>With larger projects, it can be useful to create sub-directories for your project (e.g. <code>data</code> and <code>results</code>) – you don’t need to worry about that for now, but when you do this you should use relative paths to keep everything self-contained. That’s also a good time to start getting used to the <a href="https://github.com/jennybc/here_here"><code>here::here</code></a> approach to path construction.</p>
 <p>Note that we exported a figure using a command, rather than clicking the Export in the Plots tab. This is intentional – whatever your script produces, it should do so exclusively from the code you’ve written.</p>
 </div>
 <div id="workflow" class="section level3">
 <h3>Workflow</h3>
 <p>All this together suggests a workflow. For every new project (and I mean <em>every new project</em>), do the following:</p>
 <ul>
-<li>Create a directory with a reasonable name and path (e.g. <code>~/Documents/School/P8105/Homework_2/</code>)</li>
+<li>Create a directory with a reasonable name and path (e.g. <code>~/Documents/School/P8105/Homework_2/</code>)</li>
 <li>Put an R Project in the directory</li>
 <li>Keep everything related to the analysis – data inputs, scripts, reports, output – in there</li>
 <li>Periodically check for reproducibility of the analysis</li>
@@ -767,7 +772,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
